// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli > create subcommand > should create branch with single argument 1`] = `
[
  [
    "Successfully created branch: 'feat/FOOX-1234-description'",
  ],
]
`;

exports[`cli > create subcommand > should handle basebranch argument (-b) 1`] = `
[
  [
    "Successfully created branch: 'feat/FOOX-1234-description'",
  ],
]
`;

exports[`cli > create subcommand > should handle reset option (-r) 1`] = `
[
  [
    "Reset branch: 'feat/FOOX-1234-description'",
  ],
]
`;

exports[`cli > create subcommand > should inform about branch switch 1`] = `
[
  [
    "Switched to already existing branch: 'feat/FOOX-1234-description'",
  ],
]
`;

exports[`cli > create subcommand > should print subcommand help (--help) 1`] = `
"
[0;1mUSAGE[0m

$ create [(-b, --base text)] [(-r, --reset)] <jira-key>

[0;1mDESCRIPTION[0m


Fetches the given Jira ticket and creates an aproriately named branch for it.
The branch type (bug or feat) is determined by the ticket type. The branch name
is based on the ticket summary.

[0;1mARGUMENTS[0m

[0;1m[0;30;1m<jira-key>[0;1m[0m

  A user-defined piece of text.

  The Jira ticket key to create a branch for (e.g. FOOX-1234)

[0;1mOPTIONS[0m

[0;1m(-b, --base text)[0m

  A user-defined piece of text.

  Base revision to create the new branch from (a branch name, tag or commit SHA)

  This setting is optional.

[0;1m(-r, --reset)[0m

  A true or false value.

  Reset the branch if it already exists

  This setting is optional.

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application

  This setting is optional.
"
`;

exports[`cli > create subcommand > should report missing jirakey 1`] = `
[
  [
    "Missing argument <jira-key>
",
  ],
]
`;

exports[`cli > create subcommand > should report unknwon argument 1`] = `
[
  [
    "Received unknown argument: 'unknown'
",
  ],
]
`;

exports[`cli > info subcommand > should print subcommand help (--help) 1`] = `
"
[0;1mUSAGE[0m

$ info [<jira-key>]

[0;1mDESCRIPTION[0m


Displays information for the given Jira ticket on your terminal. If no ticket is
provided, it presents information for the Jira ticket associated with the
current branch.

[0;1mARGUMENTS[0m

[0;1m[0;30;1m<jira-key>[0;1m[0m

  A user-defined piece of text.

  The Jira key for the ticket to get information for (e.g. FOOX-1234)

  This setting is optional.

[0;1mOPTIONS[0m

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application

  This setting is optional.
"
`;

exports[`cli > main command > should print help (--help) 1`] = `
"
[0;1mUSAGE[0m

$ git-jira-branch

[0;1mOPTIONS[0m

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application

  This setting is optional.

[0;1mCOMMANDS[0m

  - create [(-b, --base text)] [(-r, --reset)] <jira-key>  
Fetches the given Jira ticket and creates an aproriately named branch for it.
The branch type (bug or feat) is determined by the ticket type. The branch name
is based on the ticket summary.

  - switch <jira-key>                                      
Switches to an already existing branch that is associated with the given Jira
ticket.

  - open [<jira-key>]                                      
Opens the given Jira ticket in your default browser. If no ticket is given the
jira ticket for the current branch is opened.

  - info [<jira-key>]                                      
Displays information for the given Jira ticket on your terminal. If no ticket is
provided, it presents information for the Jira ticket associated with the
current branch.

  - list                                                   
Lists all branches that appear to be associated with a Jira ticket.
"
`;

exports[`cli > open subcommand > should open url for current branch without arguments 1`] = `
[
  [
    "Opening ticket url 'https://gcjb.atlassian.net/browse/GCJB-1234' in your default browser...",
  ],
]
`;

exports[`cli > open subcommand > should open url for current branch without arguments 2`] = `
[
  [
    "https://gcjb.atlassian.net/browse/GCJB-1234",
  ],
]
`;

exports[`cli > open subcommand > should open url for given ticket 1`] = `
[
  [
    "Opening ticket url 'https://gcjb.atlassian.net/browse/GCJB-1234' in your default browser...",
  ],
]
`;

exports[`cli > open subcommand > should open url for given ticket 2`] = `
[
  [
    "https://gcjb.atlassian.net/browse/GCJB-1234",
  ],
]
`;

exports[`cli > open subcommand > should print subcommand help (--help) 1`] = `
"
[0;1mUSAGE[0m

$ open [<jira-key>]

[0;1mDESCRIPTION[0m


Opens the given Jira ticket in your default browser. If no ticket is given the
jira ticket for the current branch is opened.

[0;1mARGUMENTS[0m

[0;1m[0;30;1m<jira-key>[0;1m[0m

  A user-defined piece of text.

  The Jira key for the ticket to open (e.g. FOOX-1234)

  This setting is optional.

[0;1mOPTIONS[0m

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application

  This setting is optional.
"
`;

exports[`cli > switch subcommand > should handle branch not found error 1`] = `
[
  [
    "[0;31mNo branch associated with Jira ticket 'FOOX-1234'[0m
",
  ],
]
`;

exports[`cli > switch subcommand > should print subcommand help (--help) 1`] = `
"
[0;1mUSAGE[0m

$ switch <jira-key>

[0;1mDESCRIPTION[0m


Switches to an already existing branch that is associated with the given Jira
ticket.

[0;1mARGUMENTS[0m

[0;1m[0;30;1m<jira-key>[0;1m[0m

  A user-defined piece of text.

  The Jira ticket key associated with the branch to switch to (e.g. FOOX-1234)

[0;1mOPTIONS[0m

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application

  This setting is optional.
"
`;

exports[`cli > switch subcommand > should switch branch 1`] = `
[
  [
    "Switched to already existing branch: 'feat/FOOX-1234-description'",
  ],
]
`;
